--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -43,3 +43,102 @@
     font-weight: 500;
     font-size: 18px;
 }
+
+.section3-row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.section3-boxheader {
+    background-color: #4077DE;
+    color: #fff;
+    padding: 10px 30px;
+    border-radius: 8px;
+    text-align: left;
+    margin-bottom: 5px;
+    max-width: 500px;
+    width: 100%;
+}
+
+.section3-headertext {
+    margin: 0;
+    font-size: 20px;
+    color: #fff;
+}
+
+.section3-boxheader h3 {
+    margin: -10px 0px;
+    font-size: 40px;
+    font-weight: 600;
+}
+
+.section3-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
+    width: 100%;
+    max-width: 560px;
+    margin-bottom: 20px;
+}
+
+.section3-grid div {
+    background-color: #e0e0e0;
+    height: 180px;
+    border-radius: 4px;
+}
+
+.section3-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 80%;
+    padding: 0 30px;
+    box-sizing: border-box;
+    gap: 20px;
+}
+
+.left-caption,
+.right-caption {
+    flex: 1;
+    font-size: 14px;
+    font-weight: 600;
+    color: #000;
+    max-width: 300px;
+}
+
+.right-caption {
+    margin-top: 200px;
+}
+
+.left-caption {
+    margin-top: 500px;
+}
+
+.section3-row {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 600px;
+    width: 100%;
+}
+
+.viewall-style {
+    background-color: transparent;
+    padding: 8px 15px;
+    border: 1px #000 solid;
+    border-radius: 15px;
+    font-weight: 500;
+    font-size: 18px;
+    cursor: pointer;
+    width: 555px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.viewall-style:hover {
+    background-color: #000;
+    color: #fff;
+}
