--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -48,3 +48,15 @@
     margin-left: -180px;
     margin-top: 30px;
 }
+
+.section3-albumtitle {
+    font-weight: 700;
+    font-size: 64px;
+    margin-top: -20px;
+}
+
+.section3-albumtracks {
+    font-size: 16px;
+    width: 40%;
+    text-align: center;
+}
