--- a/src/styles/Designs.css
+++ b/src/styles/Designs.css
@@ -17,3 +17,39 @@
     height: 600px;
     border-radius: 30px;
 }
+
+.section2-headingtypo {
+    font-size: 64px;
+    font-weight: 600;
+    border-bottom: #000 1px solid;
+    padding-bottom: 20px;
+}
+
+.section2-oneline {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 150px;
+    margin-bottom: -300px;
+    margin-top: -130px;
+}
+
+.section2-fontnamemain {
+    font-size: 150px;
+    font-weight: 400;
+    background-color: #E1F1FF;
+    width: 600px;
+    border-right: #4077DE 5px solid;
+}
+
+.section2-fontname {
+    font-size: 150px;
+    font-weight: 400;
+}
+
+.section2-explanation {
+    margin-top: 50px;
+    text-align: center;
+    width: 50%;
+}
