--- a/src/styles/Designs.css
+++ b/src/styles/Designs.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 75%;
+    width: 88%;
 }
 
 .works-container {
@@ -18,6 +18,13 @@
     overflow-x: auto;
     padding-bottom: 20px;
     scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.works-container::-webkit-scrollbar {
+    display: none;
 }
 
 .work {
@@ -77,7 +84,8 @@
     display: flex;
     align-items: center;
     position: relative;
-    width: 100%;
+    width: 90%;
+    overflow-x: scroll;
 }
 
 .scroll-icon {
