--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -6,7 +6,7 @@
 }
 
 .igpost-box {
-      position: relative;   
+    position: relative;
     background-color: transparent;
     box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.1);
     border: #000 1px solid;
@@ -45,22 +45,50 @@
 }
 
 .ig-camera {
-  width: 900px;
-  margin-left: -180px;
-  margin-top: 30px;
-  position: relative;
-  z-index: 1;
+    width: 900px;
+    margin-left: -180px;
+    margin-top: 30px;
+    position: relative;
+    z-index: 1;
 }
 
 .ig-photo {
-  background-color: #000;
-  border-radius: 10px;
-  width: 490px;
-  height: 352px;
-  position: absolute;
-  top: 210px;
-  left: -4px;
-  z-index: 10000;
+    background-color: #000;
+    border-radius: 10px;
+    width: 490px;
+    height: 352px;
+    position: absolute;
+    top: 210px;
+    left: -4px;
+    z-index: 10000;
+    overflow: hidden;
+}
+
+.ig-photo-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.ig-previous-button,
+.ig-next-button {
+    position: absolute;
+    top: 413px;
+    right: -170px;
+    padding: 20px;
+    background-color: rgba(200, 200, 200, 0.3);
+    border: none;
+    border-radius: 50%;
+    font-size: 16px;
+    cursor: pointer;
+    z-index: 20000;
+    transition: background-color 0.2s;
+}
+
+.ig-previous-button {
+    top: 413px;
+    right: -97px;
 }
 
 .section3-albumtitle {
