--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -226,19 +226,19 @@
     margin-bottom: 40px;
 }
 
-.section4-icons img:nth-child(1) {
+.section4-icons a:nth-child(1) {
     transform: translateY(-20px);
 }
 
-.section4-icons img:nth-child(2) {
+.section4-icons a:nth-child(2) {
     transform: translateY(10px);
 }
 
-.section4-icons img:nth-child(3) {
+.section4-icons a:nth-child(3) {
     transform: translateY(45px);
 }
 
-.section4-icons img:nth-child(4) {
+.section4-icons a:nth-child(4) {
     transform: translateY(75px);
 }
 
