--- a/src/styles/Designs.css
+++ b/src/styles/Designs.css
@@ -31,7 +31,7 @@
     flex: 0 0 auto;
     min-width: 300px;
     max-width: 300px;
-    height: 500px;
+    height: 520px;
     background-color: #f9f9f9;
     border: 2px solid #000;
     border-radius: 20px;
@@ -47,8 +47,8 @@
 }
 
 .work.expanded {
-    min-width: 600px;
-    max-width: 600px;
+    min-width: 910px;
+    max-width: 800px;
     background-color: #e0e0e0;
 }
 
@@ -62,6 +62,7 @@
     border: #000 1px solid;
     border-radius: 20px;
     padding: 5px 15px;
+    background-color: #fff;
 }
 
 .work-bottominfo {
