--- a/src/styles/Designs.css
+++ b/src/styles/Designs.css
@@ -32,9 +32,9 @@
     min-width: 300px;
     max-width: 300px;
     height: 520px;
-    background-color: #f9f9f9;
-    border: 2px solid #000;
+    border: 1px solid #ddd;
     border-radius: 20px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     padding: 20px 40px;
     cursor: pointer;
     transition: all 0.4s ease;
@@ -70,7 +70,7 @@
 }
 
 .hidden {
-  display: none;
+    display: none;
 }
 
 
