--- a/src/styles/Designs.css
+++ b/src/styles/Designs.css
@@ -263,3 +263,28 @@
         font-size: 80px;
     }
 }
+
+.mobile-warning {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.95);
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 600;
+    text-align: center;
+    padding: 2rem;
+    z-index: 10000;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+@media (max-width: 1800px) {
+    .mobile-warning {
+        display: flex;
+    }
+}
