--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -56,17 +56,18 @@ body {
 }
 
 .contactbutton-style {
-    background-color: transparent;
+    background-color: #4077DE;
+    color: #fff;
     padding: clamp(6px, 1.5vw, 8px) clamp(10px, 3vw, 15px);
-    border: 1px #ccc solid;
+    border: none;
     border-radius: clamp(15px, 4vw, 20px);
-    font-weight: 500;
+    font-weight: 600;
     font-size: clamp(14px, 1vw, 16px);
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .contactbutton-style:hover {
-    background-color: #4077DE;
+    background-color: #305599;
     color: #fff;
 }
