--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -8,18 +8,52 @@
         opacity: 1;
         transform: translateY(0);
     }
-    
+
 }
 
-.contact-container {
+.contact-title {
+    font-size: clamp(24px, 4vw, 32px);
+    font-weight: 700;
+    margin-bottom: 1rem;
+    color: #4077DE;
+}
+
+.contact-subtitle {
+    font-size: clamp(14px, 1.5vw, 18px);
+    color: #666;
+    margin-bottom: 2rem;
+    margin-top: -0.1rem;
+    width: 30%;
+    text-align: center;
+}
+
+.contact-cv-border {
+    border: 1px dashed #ccc;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
+    transition: border-color 0.3s ease;
+    cursor: pointer;
+    text-align: center;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    text-align: center;
-    animation: fadeIn 1s ease forwards;
-    overflow: hidden;
+    width: 500px;
+    height: 200px;
+}
+
+.cv-download-btn {
+    background-color: transparent;
+    border: #4077DE solid 2px;
+    color: #4077DE;
+    padding: 10px 20px;
+    border-radius: clamp(15px, 4vw, 20px);
+    font-weight: 600;
+    font-size: clamp(14px, 1vw, 16px);
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .contact-content {
