--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -11,6 +11,30 @@
 
 }
 
+.cv-section {
+    animation: fadeIn 1s ease-in-out;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    margin: 30px 100px;
+    gap: 5rem;
+}
+
+.cv {
+    width: 35%;
+}
+
+.container.cv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: none;
+    gap: 1rem;
+}
+
 .contact-title {
     font-size: clamp(24px, 4vw, 32px);
     font-weight: 700;
@@ -23,7 +47,6 @@
     color: #666;
     margin-bottom: 2rem;
     margin-top: -0.1rem;
-    width: 30%;
     text-align: center;
 }
 
